# bazel-execlog-cmp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: full.yml  release.yml
src/: main.rs
