[package]
name = "bazel-execlog-cmp"
version = "0.1.0"
authors = ["Rahul Butani <>"]
edition = "2018"

description = "CLI tool that helps compare Bazel execution logs"
documentation = "https://docs.rs/bazel-execlog-cmp"
homepage = "https://github.com/rrbutani/bazel-execlog-cmp"
repository = "https://github.com/rrbutani/bazel-execlog-cmp"

readme = "README.md"

keywords = ["bazel", "execlog"]
categories = ["command-line-utilities", "development-tools::build-utils"]

license = "MIT"
exclude = [".github"]

[badges]
github-actions = { repository = "rrbutani/bazel-execlog-cmp", workflow = "full" }

is-it-maintained-issue-resolution = { repository = "rrbutani/bazel-execlog-cmp" }
is-it-maintained-open-issues = { repository = "rrbutani/bazel-execlog-cmp" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "*", features = ["derive"] }
serde-aux = "*"
serde_json = "*"
color-eyre = "*"
hex-serde = "*"
indicatif = { version = "*", features = ["rayon"] }
rayon = "*"
rustyline = "*"
prettydiff = "*"
fuzzy-matcher = "*"

[features]
default = []

# Results in higher memory usage and takes longer to load.
json-dump-command = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
