[package]
name = "bazel-execlog-cmp"
version = "0.1.1"
authors = ["Rahul Butani <>"]
edition = "2018"

description = "CLI tool that helps compare Bazel execution logs"
documentation = "https://docs.rs/bazel-execlog-cmp"
homepage = "https://github.com/rrbutani/bazel-execlog-cmp"
repository = "https://github.com/rrbutani/bazel-execlog-cmp"

readme = "README.md"

keywords = ["bazel", "execlog"]
categories = ["command-line-utilities", "development-tools::build-utils"]

license = "MIT"
exclude = [".github"]

[badges]
github-actions = { repository = "rrbutani/bazel-execlog-cmp", workflow = "full" }

is-it-maintained-issue-resolution = { repository = "rrbutani/bazel-execlog-cmp" }
is-it-maintained-open-issues = { repository = "rrbutani/bazel-execlog-cmp" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-aux = "2.2"
serde_json = "1.0"
color-eyre = "0.5"
hex-serde = "0.1"
indicatif = { version = "0.16", features = ["rayon"] }
rayon = "1.5"
rustyline = "8.0"
prettydiff = "0.4"
fuzzy-matcher = "0.3"

[features]
default = []

# Results in higher memory usage and takes longer to load.
json-dump-command = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
